# Tatz884.github.io

./: README.md  index.html
To do list/: todo-list.html
To do list/scripts/: main.js
To-do-list/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  todo-list.html
To-do-list/backend/: .dockerignore  Dockerfile  Procfile  docker-compose.yaml  fly.toml  pyproject.toml  requirements.txt
To-do-list/backend/api/: db.py  main.py  migrate_db.py
To-do-list/backend/api/cruds/: delete_all_tasks.sql  delete_all_users.sql  done.py  task.py  user.py
To-do-list/backend/api/models/: task.py
To-do-list/backend/api/routers/: done.py  healthcheck.py  task.py  user.py
To-do-list/backend/api/schemas/: task.py  user.py
To-do-list/backend/tests/: test_main.py
To-do-list/frontend/scripts/: main.js
To-do-list/frontend/styles/: input.css  output.css  style.css  tailwind.config.js
To-do-list/scripts/: main.js
To-do-list/styles/: style.css
images/: Tatsuya
scripts/: main.js
styles/: main.css
